--- a/scss/main.scss
+++ b/scss/main.scss
@@ -24,45 +24,52 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .page {
+  background-color: $color-background;
+  font-family: $font-roboto;
+  color: $color-font-main;
+
+  height: 100vh;
+  width: 100vw;
+  font-size: 12px;
+  overflow: hidden;
+
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  height: 100vh;
-  width: 100vw;
-  background-color: $color-background;
-  font-family: $font-roboto;
-  color: $color-font-main;
-  font-size: 12px;
 }
 
 .frame {
   min-width: 98%;
+  display: flex;
+  flex-direction: column;
 
   &.navbar {
+    color: $color-font-header;
+    font-family: $font-righteous;
+
     height: 16vh;
     min-height: 48px;
     display: flex;
     justify-content: center;
     font-size: 1.75em;
-    color: $color-font-header;
-    font-family: $font-righteous;
   }
 
   &.project-tabs {
     height: 50vh;
     min-height: 250px;
+    width: 95%;
     display: flex;
-    justify-content: center;
     align-items: center;
+
+    justify-content: space-around;
   }
 
   &.project-info {
     height: 22vh;
     min-height: 100px;
     min-width: 90%;
-    box-shadow: 2px 2px 2px 2px red;
-    //background-color: $color-alternate-background;
+    box-shadow: 2px 2px red;
     padding: 20px;
   }
 }
@@ -74,9 +81,12 @@ h1, h2, h3, h4, h5, h6 {
   background-color: $color-font-main-secondary;
 }
 
+.project-tabs {
+  width: 100% !important;
+}
 
 .thumbnail {
-  height: 250px;
+  height: 200px;
   width: 200px;
   box-shadow: 2px 2px 2px 2px;
   transform: translateZ(2em) translateX(200px);
