--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,6 +11,10 @@ $color-font-header:           #bada55;
 $font-righteous: 'Righteous', cursive;
 $font-roboto: 'Roboto', sans-serif;
 
+/* Measurements */
+
+$frame-width: 95%;
+
 *, *::before, *::after {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -30,83 +34,115 @@ h1, h2, h3, h4, h5, h6 {
 
   height: 100vh;
   width: 100vw;
+
+  min-height: 480px;
+  min-width: 320px;
   font-size: 12px;
   overflow: hidden;
 
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  //justify-content: space-between;
   align-items: center;
 }
 
 .frame {
-  min-width: 98%;
+  min-width: $frame-width;
   display: flex;
   flex-direction: column;
 
   &.navbar {
     color: $color-font-header;
     font-family: $font-righteous;
-
-    height: 16vh;
+    max-height: 85px;
     min-height: 48px;
+
     display: flex;
     justify-content: center;
     font-size: 1.75em;
   }
 
   &.project-tabs {
-    height: 50vh;
-    min-height: 250px;
-    width: 95%;
-    display: flex;
-    align-items: center;
+    min-height: 475px !important;
+    max-height: 85% !important;
 
-    justify-content: space-around;
+    max-width: 95% !important;
+    align-items: center !important;
+    //justify-content: space-around;
   }
 
-  &.project-info {
-    height: 22vh;
-    min-height: 100px;
-    min-width: 90%;
-    box-shadow: 2px 2px red;
-    padding: 20px;
-  }
 }
 
-.btn-toggle-twitter {
-  min-width: 90%;
-  max-width: 90%;
-  min-height: 25px;
-  background-color: $color-font-main-secondary;
+.project-tabs-bar {
+  min-width: $frame-width !important;
+  min-height: 48px !important;
+  margin-bottom: 10px !important;
 }
 
-.project-tabs {
-  width: 100% !important;
+.project-thumbnail-frame {
+  width: $frame-width !important;
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+  min-height: 420px !important;
+  max-height: 80% !important;
+  overflow: hidden !important;
+}
+
+.react-swipeable-view-container {
+  max-height: 100% !important;
+  max-width: 100% !important;
+  positon: relative !important;
 }
 
 .thumbnail {
-  height: 200px;
-  width: 200px;
-  box-shadow: 2px 2px 2px 2px;
-  transform: translateZ(2em) translateX(200px);
-  &:hover {
-    background-color: red;
-    border: solid red 1px;
+  max-height: 95% !important;
+  min-height: 90% !important;
+  max-width: 100% !important;
+  margin: 0px !important;
+
+
+
+}
+
+.project-card {
+  min-height: 90% !important;
+  min-width: 80% !important;
+  max-width: 100% !important;
+  margin: 0px !important;
+ }
+
+.project-card-media {
+  max-height: 25% !important;
+  min-height: 360px !important;
+}
+
+.project-card-title {
+  max-height: 48px !important;
+}
+.project-card-overlay {
+  padding: 0px !important;
+  max-height: 15% !important;
+  &span {
+  font-size: 1em !important;
+
   }
+}
+
+.project-picture {
 
   &.tetris {
-    background-image: url("../tetrisThumbnail.png");
-    background-size:  cover;
+    background-image: url('public/tetrisThumbnail.png');
+    background-position: center;
+    min-height: 50% !important;
   }
 }
 
 /*************************************************/
 
 .navbar-container {
-  width: 95%;
+  width: $frame-width;
   min-height: 100%;
-  //background-color: $color-alternate-background;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -134,10 +170,30 @@ h1, h2, h3, h4, h5, h6 {
 
 .menu-item {
   color: $color-font-header !important;
+  width: 80% !important;
 }
 
 .popover-button {
   background-color: $color-background !important;
   color: $color-font-header !important;
   max-width: 30%;
+}
+
+@media screen and (min-width: 450px) {
+  .project-card-media {
+    max-width: 400px !important;
+    margin: 0px !important;
+    //height: 400px !important;
+    &img {
+      margin-right: auto !important;
+      margin-left: auto !important;
+    }
+  }
+
+  .project-card {
+    max-width: 500px !important;
+  }
+
+  .project-card {
+  }
 }
