--- a/scss/main.scss
+++ b/scss/main.scss
@@ -39,14 +39,12 @@ body {
   font-family: $family-sans-serif;
   font-size: 20px;
 }
-
 .page, .navbar, .content-section, .page-sidebar, .page-content {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
 }
-
 .page {
   height: 98vh;
   width: 98vw;
@@ -56,7 +54,6 @@ body {
   justify-content: space-between;
   font-size: 16px;
 }
-
 .page-header, .page-footer {
   display: flex;
   align-items: center;
@@ -64,10 +61,8 @@ body {
   height: 15%;
   min-height: 70px;
   min-width: 100%;
-  // background-color: $grey;
   border-radius: 5px;
 }
-
 .navbar {
   flex-direction: row;
   width: 95%;
@@ -75,7 +70,6 @@ body {
   align-items: center;
   color: $green;
   background: transparent;
-
   .nav-item {
     .contact-button {
       box-shadow: inset 1px -2px 5px 2px $light-grey;
@@ -83,12 +77,10 @@ body {
       background: -webkit-linear-gradient(top, $translucent-grey 0%, $green 100%);;
       color: $darker_green;
       border-color: $light-grey;
-
       &:hover {
         box-shadow: inset 1px -2px 5px 2px $grey;
         border-color: $grey;
       }
-
       &:active {
         box-shadow: inset 1px 6px 5px 2px $grey;
       }
@@ -102,43 +94,33 @@ body {
   max-width: 95%;
   min-height: 300px;
   flex-direction: row;
-}
-
-.content-section {
-  height: 100%;
-  justify-content: center;
-
-  .project-grid {
-    display: flex;
-    flex-wrap: wrap;
-    width: 90%;
-    align-items: center;
-    justify-content: space-around;
-    overflow: auto;
-    // box-shadow: 2px 2px 2px 2px $grey;
-  }
-
-  .project-card {
+  .content-section {
+    height: 100%;
+    justify-content: center;
+    .sub-page {
     display: none;
-  }
-
-  .project-header {
-    font-size: 2em;
-    font-weight: 700;
+    }
+    .project-grid {
+      display: flex;
+      flex-wrap: wrap;
+      min-width: 90%;
+      align-items: flex-start;
+      justify-content: flex-start;
+      overflow: auto;
+      .project-card {
+        width: 40%;
+        height: auto;
+      }
+    }
   }
 }
-
 .circle {
   border-radius: 50%;
   box-shadow: 4px 0px 20px 10px $orange;
 }
-
 .frame-border {
-  // border: 4px solid #fff;
-  // box-shadow: -8px -17px 53px 19px $grey;
   border-radius: 50%;
 }
-
 .box {
   background: -webkit-radial-gradient(#ffffff, $orange);
   border-style: solid;
@@ -146,8 +128,6 @@ body {
   border-color: transparent;
   box-shadow: 4px 4px 0px 0px $light-grey;
   border-radius: 50%;
-  // padding: 0px;
-
   &:hover {
     border-color: $grey;
     box-shadow: 6px 6px 20px 2px $grey;
@@ -156,40 +136,28 @@ body {
     border-color: $green;
   }
 }
-
-.blurb {
+.blurb, .content {
   font-weight: 300;
 }
-
 .screen-too-small-error {
   display: none;
 }
-
 .active {
   display: initial !important;
-}
-
-.sub-page {
-  display: none;
 }
 
 @media screen and (max-width: 600px) {
   .page {
     display: none;
-
   }
-
   .screen-too-small-error {
     position: fixed;
     top: 45%;
-    // left: 10%;
     display: block;
-
     .error-message {
       display: inline;
     }
   }
-
   .frame-border{
     display: block;
   }
