--- a/css/style.css
+++ b/css/style.css
@@ -880,10 +880,12 @@ ul.portfolio li.active {
   font-size: 30px;
   box-shadow: 0px 1px 2px 0px rgba(90, 91, 95, 0.15);
   transition: all 0.3s ease-in-out;
+  border-radius: 40%;  
 }
 
 .social-icon li a:hover {
-   box-shadow: 0px 8px 15px 0px rgba(90, 91, 95, 0.33);
+   box-shadow: 0px 8px 15px 5px rgba(90, 91, 95, 0.33);
+  border-radius: 50%;  
 }
 
 .social-icon li a .fa {
