--- a/css/style.css
+++ b/css/style.css
@@ -726,6 +726,7 @@ ul.portfolio li.active {
 
 .services-section {
   background-color: #F9F9F9;
+  box-sizing: border-box;
 }
 
 .services-section hr {
@@ -742,10 +743,11 @@ ul.portfolio li.active {
   transition: all 0.3s ease-in-out;
   position: relative;
   top: 0px;
-  padding: 60px 40px 60px 40px;
+  padding: 40px 20px 40px 20px;
   margin-top: 32px;
   font-size: 10px;
   line-height: 12px;
+  height: 365px;
 }
 
 .services-section .services-detail:hover {
@@ -756,10 +758,6 @@ ul.portfolio li.active {
 
 .services-section .services-detail p {
     line-height: 16px;
-}
-
-.services-section .services-detail .fa {
-  font-size: 24px;
 }
 
 
@@ -937,7 +935,45 @@ ul.portfolio li.active {
     color: #ffffff;
 }
 
+/* Email Form */
 
+form {
+  width: 500px;
+  background: white;
+  padding: 20px 25px;
+  margin: auto;
+  margin-top: 30px;
+  box-shadow: 0px 1px 2px rgba(0,0,0,0.2);
+}
+form input,
+form textarea {
+  font: inherit;
+  padding: 5px 5px;
+  width: 100%;
+  margin-top: 3px;
+  margin-bottom: 15px;
+  box-sizing: border-box;
+}
+form textarea {
+  height: 100px;
+}
+form button {
+  border: 1px solid rgba(0,0,0,0.2);
+  padding: 8px 35px;
+  font-size: 12px;
+  background: #888;
+  color: white;
+}
+form label {
+  color: #777;
+  font-size: 11px;
+  margin-bottom: 2px;
+  display: block;
+}
+
+form span {
+    margin: 3px;
+}
 
 /* Responsive */
 
