--- a/css/style.css
+++ b/css/style.css
@@ -57,12 +57,12 @@ body {
 
 ::selection {
     background-color: #bada55;
-    color: #ffffff;
+    color: #fafafa;
 }
 
 ::-moz-selection {
     background-color: #bada55;
-    color: #ffffff;
+    color: #fafafa;
 }
 
 h1,
@@ -83,7 +83,7 @@ img {
 }
 
 a:hover {
-    color: #fff;
+    color: #fafafa;
     text-decoration: none;
 }
 
@@ -130,6 +130,8 @@ fieldset {
     padding: 10px 0;
     width: 350px;
 	margin-bottom: 30px;
+    text-shadow: 1px 1px 2px #666;
+    
 }
 
 .section-title p {
@@ -227,8 +229,8 @@ fieldset {
 }
 
 .button-style-dark {
-	border: 3px solid #000000 !important;
-	color: #000000;
+	border: 3px solid #0d0d0d000 !important;
+	color: #0d0d0d;
 }
 
 
@@ -241,7 +243,7 @@ fieldset {
     left: 0;
     height: 100%;
     width: 100%;
-    background: #ffffff;
+    background: #fafafa;
     z-index: 999;
     -webkit-transition: all .5s ease;
     -moz-transition: all .5s ease;
@@ -340,7 +342,7 @@ body.loaded #preloader{
 
 .home-section-background:after {
     position: absolute;
-    background: rgba(0, 0, 0, .7);
+    background: rgba(13, 13, 13, .7);
     left: 0;
     top: 0;
     width: 100%;
@@ -460,7 +462,7 @@ body.loaded #preloader{
 .navigation-background {
     -webkit-transition: all 0.3s ease-out;
     transition: all 0.3s ease-out;
-    background: #000;
+    background: #0d0d0d;
 }
 
 .navigation-background .logo {
@@ -504,6 +506,16 @@ body.loaded #preloader{
 	font-size: 15px;
 }
 
+/* Education */
+
+.education-section {
+	overflow: hidden;
+	background-color: #F9F9F9;
+}
+.education-section p {
+	padding: 50px;
+	font-size: 15px;
+}
 
 
 /* Portfolio */
@@ -536,7 +548,7 @@ ul.portfolio li {
 }
 
 ul.portfolio li:hover {
-    color: #000;
+    color: #0d0d0d;
     border: none;
 }
 
@@ -610,7 +622,7 @@ ul.portfolio li.active {
 
 
 /* Testimonial */
-
+/*
 .testimonial-section {
     background: #F9F9F9;
 }
@@ -655,7 +667,7 @@ ul.portfolio li.active {
 }
 
 .owl-navi:hover {
-	color: #000000 !important;
+	color: #0d0d0d000 !important;
 }
 
 .owl-theme .owl-controls .owl-buttons div {
@@ -669,7 +681,7 @@ ul.portfolio li.active {
     -moz-border-radius: 4px;
     border-radius: 4px;
 }
-
+*/
 
 
 /* Statistics */
@@ -687,37 +699,17 @@ ul.portfolio li.active {
   color: #ffffff;
 }
 
+.statistics-group {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
 .statistics.block .statistics-icon,
 .statistics.block .statistics-content {
   width: auto;
   float: none;
   text-align: center;
-}
-
-.statistics-icon {
-  width: 30%;
-  text-align: center;
-  margin-right: 5%;
-  float: left;
-  font-size: 50px;
-}
-
-.statistics-content {
-  float: left;
-  width: 65%;
-  text-align: left;
-}
-
-.statistics-content > h5 {
-  font-size: 34px;
-  margin-top: 0;
-}
-
-.statistics-content > span {
-  display: block;
-  font-weight: 500;
-  font-size: 12px;
-  letter-spacing: 1px;
 }
 
 
@@ -848,7 +840,9 @@ ul.portfolio li.active {
 
 
 .skill-logo {
+    height: 75px;
     width: auto;
+    margin: 5px;
 }
 
 
@@ -920,7 +914,7 @@ ul.portfolio li.active {
 /* Footer */
 
 .footer-section {
-    background: #000;
+    background: #0d0d0d;
     padding: 80px 0px;
     color: #f8f8f8;
 }
@@ -959,7 +953,7 @@ form button {
   border: 1px solid rgba(0,0,0,0.2);
   padding: 8px 35px;
   font-size: 12px;
-  background: #888;
+  background: #0d0d0d;
   color: white;
 }
 form label {
@@ -1043,10 +1037,10 @@ form span {
         margin-top: -30px;
     }
     .navbar-collapse {
-        background: rgba(0, 0, 0, .9);
+        background: rgba(13, 13, 13, .9);
     }
     .navigation-background .navbar-collapse {
-        background: rgba(0, 0, 0, .9);
+        background: rgba(13, 13, 13, .9);
     }
     .home-section-background {
         padding-top: 120px;
