--- a/css/style.css
+++ b/css/style.css
@@ -1,43 +1,5 @@
-/*
-
-    Template Name : Rolling - Freelancer Portfolio Template
-    Author : UiPasta Team
-    Website : http://www.uipasta.com/
-    Support : http://www.uipasta.com/support/
-
-
-*/
-
-
-
-/*
-
-   Table Of Content
-
-   1. Global Style
-   2. Preloader
-   3. Home Section and Navigation Menu
-   4. About Me
-   5. Portfolio
-   6. Testimonial
-   7. Statistics
-   8. Services
-   9. Call to Action
-  10. Contact Us
-  11. Social Icons
-  12. Footer
-  13. Responsive
-  14. Scroll To Top
-  15. Useful Classes ( Such as : Margin, Padding, colors  "This classes will be helpful for you during designing/development time.")
-  16. UiPasta Credit
-
-
-*/
 
 @import url('https://fonts.googleapis.com/css?family=Boogaloo|Alegreya');
-
-/*font-family: 'Abril Fatface', cursive;
-font-family: 'Alegreya', serif;*/
 
 /* Global Style */
 
@@ -57,12 +19,12 @@ body {
 
 ::selection {
     background-color: #bada55;
-    color: #fafafa;
+    color: #f8f8f8;
 }
 
 ::-moz-selection {
     background-color: #bada55;
-    color: #fafafa;
+    color: #f8f8f8;
 }
 
 h1,
@@ -83,7 +45,7 @@ img {
 }
 
 a:hover {
-    color: #fafafa;
+    color: #f8f8f8;
     text-decoration: none;
 }
 
@@ -123,7 +85,7 @@ fieldset {
 .section-title h2 {
     margin-top: 0;
     font-weight: 600;
-    border-bottom: 4px double #24b662;
+    border-bottom: 4px double #bada55;
 	border-radius: 25px;
     font-size: 30px;
     margin: 0 auto;
@@ -192,16 +154,16 @@ fieldset {
 
 .button-style {
 	border-radius: 50px;
-	border: 3px solid #fff;
-	color: #fff;
+	border: 3px solid #f8f8f8;
+	color: #f8f8f8;
 	overflow: hidden;
 }
 
 .button-style:hover,
 .button-style:active,
 .button-style:focus {
-	background: #24b662;
-	color: #ffffff !important;
+	background: #bada55;
+	color: #f8f8f8!important;
 }
 
 .button-style:before {
@@ -209,14 +171,14 @@ fieldset {
 	height: 100%;
 	font-size: 125%;
 	line-height: 3.5;
-	color: #fff;
+	color: #f8f8f8;
 	-webkit-transition: all 0.3s;
 	-moz-transition: all 0.3s;
 	transition: all 0.3s;
 }
 
 .button-style:active:before {
-	color: #17954c;
+	color: #bada55;
 }
 
 .button-style-icon:before {
@@ -229,7 +191,7 @@ fieldset {
 }
 
 .button-style-dark {
-	border: 3px solid #0d0d0d000 !important;
+	border: 3px solid #0d0d0d !important;
 	color: #0d0d0d;
 }
 
@@ -243,7 +205,7 @@ fieldset {
     left: 0;
     height: 100%;
     width: 100%;
-    background: #fafafa;
+    background: #f8f8f8;
     z-index: 999;
     -webkit-transition: all .5s ease;
     -moz-transition: all .5s ease;
@@ -265,7 +227,7 @@ body.loaded #preloader{
     margin: -75px 0 0 -75px;
     border-radius: 50%;
     border: 3px solid transparent;
-    border-top-color: #24b662;
+    border-top-color: #bada55;
     -webkit-animation: spin 2s linear infinite;
     animation: spin 2s linear infinite;
 }
@@ -279,7 +241,7 @@ body.loaded #preloader{
     bottom: 5px;
     border-radius: 50%;
     border: 3px solid transparent;
-    border-top-color: #24b662;
+    border-top-color: #bada55;
     -webkit-animation: spin 3s linear infinite;
     animation: spin 3s linear infinite;
 }
@@ -293,7 +255,7 @@ body.loaded #preloader{
     bottom: 15px;
     border-radius: 50%;
     border: 3px solid transparent;
-    border-top-color: #24b662;
+    border-top-color: #bada55;
     -webkit-animation: spin 1.5s linear infinite;
     animation: spin 1.5s linear infinite;
 }
@@ -422,7 +384,7 @@ body.loaded #preloader{
 
 .logo a {
     display: block;
-    color: #fff;
+    color: #bada55;
     text-transform: uppercase;
     letter-spacing: 6px;
     font-weight: 900;
@@ -430,7 +392,7 @@ body.loaded #preloader{
 }
 
 .navigation-menu .navbar-nav li a {
-    color: #fff;
+    color: #bada55;
     text-transform: uppercase;
     font-size: 12px;
     letter-spacing: 1px;
@@ -442,7 +404,7 @@ body.loaded #preloader{
 
 .navigation-menu .navbar-nav li a:hover {
     background: none;
-    color: #fff;
+    color: #bada55;
     -webkit-transition: all 0.3s ease-out;
     transition: all 0.3s ease-out;
 }
@@ -450,7 +412,7 @@ body.loaded #preloader{
 .nav li a:focus,
 .nav li a:hover {
     background: none;
-    color: #fff;
+    color: #bada55;
     -webkit-transition: all 0.3s ease-out;
     transition: all 0.3s ease-out;
 }
@@ -472,14 +434,14 @@ body.loaded #preloader{
 }
 
 .navigation-background .navigation-menu .navbar-nav li a {
-    color: #fff;
+    color: #bada55;
     padding: 20px 15px;
     -webkit-transition: .3s;
     transition: .3s;
 }
 
 .navigation-background .navigation-menu .navbar-nav li a:hover {
-    color: #fff;
+    color: #bada55;
 }
 
 
@@ -488,7 +450,7 @@ body.loaded #preloader{
 
 .about-section {
 	overflow: hidden;
-	background-color: #F9F9F9;
+	background-color: #f8f8f8;
 }
 
 .about-section img {
@@ -510,7 +472,7 @@ body.loaded #preloader{
 
 .education-section {
 	overflow: hidden;
-	background-color: #F9F9F9;
+	background-color: #f8f8f8;
 }
 .education-section p {
 	padding: 50px;
@@ -541,7 +503,7 @@ ul.portfolio li {
     text-transform: capitalize;
     font-size: 14px;
     font-weight: 400;
-    color: #333;
+    color: #0d0d0d;
     border: none;
     cursor: pointer;
     font-size: 13px;
@@ -553,8 +515,8 @@ ul.portfolio li:hover {
 }
 
 ul.portfolio li.active {
-    color: #ffffff;
-    background-color: #24b662;
+    color: #f8f8f8;
+    background-color: #bada55;
     padding: 5px 20px;
     border-radius: 20px;
     box-shadow: 0px 1px 2px 0px rgba(90, 91, 95, 0.15);
@@ -582,18 +544,18 @@ ul.portfolio li.active {
 }
 
 .portfolio .item a:before{
-  color: #ffffff;
+  color: #f8f8f8;
   content: "\f00e";
   font-family: "FontAwesome";
   text-align: center;
-  color: #ffffff;
+  color: #f8f8f8;
   position: absolute;
   font-size: 25px;
   top: 2%;
   opacity: 0;
   left: 0%;
   right: 0%;
-  background-color: #24b662;
+  background-color: #bada55;
   width: 70px;
   height: 70px;
   border-radius: 50%;
@@ -610,7 +572,7 @@ ul.portfolio li.active {
 .mfp-image-holder .mfp-close, .mfp-iframe-holder .mfp-close {
 	margin-top: 40px;
     font-size: 50px;
-    background-color: #24b662;
+    background-color: #bada55;
     width: 44px;
 	right: 0px;
 }
@@ -618,70 +580,6 @@ ul.portfolio li.active {
 .mfp-zoom-out-cur, .mfp-zoom-out-cur .mfp-image-holder .mfp-close {
     cursor: inherit;
 }
-
-
-
-/* Testimonial */
-/*
-.testimonial-section {
-    background: #F9F9F9;
-}
-
-.testimonial-carousel-list {
-    padding: 30px;
-    background-color: #fff;
-    border-radius: 4px;
-	box-shadow: 0px 1px 2px 0px rgba(90, 91, 95, 0.15);
-    transition: all 0.3s ease-in-out;
-}
-
-.testimonial-carousel-list:hover {
-    box-shadow: 0px 16px 22px 0px rgba(90, 91, 95, 0.3);
-    top: -5px;
-}
-
-.testimonial-word {
-    padding: 0px 100px;
-}
-
-.testimonial-word img {
-	margin: 0 auto;
-    max-width: 140px;
-}
-
-.testimonial-word h2 {
-    font-size: 12px;
-    text-transform: uppercase;
-	color: #24b662;
-    font-weight: 700;
-    letter-spacing: 4px;
-    margin: 20px 0px;
-}
-
-.testimonial-word p {
-    line-height: 25px;
-}
-
-.owl-navi {
-	color: #24b662;
-}
-
-.owl-navi:hover {
-	color: #0d0d0d000 !important;
-}
-
-.owl-theme .owl-controls .owl-buttons div {
-    display: inline-block;
-    zoom: 1;
-    margin: 5px;
-    padding: 7px 13px;
-	background-color: transparent;
-    opacity: 1;
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    border-radius: 4px;
-}
-*/
 
 
 /* Statistics */
@@ -696,7 +594,7 @@ ul.portfolio li.active {
 .statistics {
   margin: 25px 0;
   overflow: hidden;
-  color: #ffffff;
+  color: #f8f8f8;
 }
 
 .statistics-group {
@@ -717,12 +615,12 @@ ul.portfolio li.active {
 /* Services */
 
 .services-section {
-  background-color: #F9F9F9;
+  background-color: #f8f8f8;
   box-sizing: border-box;
 }
 
 .services-section hr {
-  border-bottom: 2px solid #24b662;
+  border-bottom: 2px solid #bada55;
   width: 42px;
   margin-left: 0px;
 }
@@ -730,7 +628,7 @@ ul.portfolio li.active {
 .services-section .services-detail {
   border-radius: 4px;
   border-bottom-right-radius: 20%;
-  background-color: #ffffff;
+  background-color: #f8f8f8;
   box-shadow: 0px 1px 2px 0px rgba(90, 91, 95, 0.15);
   transition: all 0.3s ease-in-out;
   position: relative;
@@ -768,7 +666,7 @@ ul.portfolio li.active {
 /* Contact Us */
 
 .contact-us {
-	background-color: #f9f9f9;
+	background-color: #f8f8f8;
 }
 
 .contact-us-detail {
@@ -777,7 +675,7 @@ ul.portfolio li.active {
 .contact-us-detail i {
 	font-size: 30px;
     margin-bottom: 10px;
-    background-color: #fff;
+    background-color: #f8f8f8;
     border-radius: 50%;
     box-shadow: 0px 1px 2px 0px rgba(90, 91, 95, 0.15);
 	transition: all 0.3s ease-in-out;
@@ -792,11 +690,11 @@ ul.portfolio li.active {
 }
 
 .contact-us-detail a {
-	color: #333;
+	color: #0d0d0d;
 }
 
 .contact-us-detail a:hover {
-	color: #333;
+	color: #0d0d0d;
 }
 
 .form-group {
@@ -828,14 +726,14 @@ ul.portfolio li.active {
 }
 
 .form-control:focus {
-	border-color: #24b662;
+	border-color: #bada55;
 	border-width: 2px;
 }
 
 .map {
     width: 100%;
     height: 340px;
-    border: 1px solid #24b662;
+    border: 1px solid #bada55;
 }
 
 
@@ -875,7 +773,7 @@ ul.portfolio li.active {
   width: 60px;
   height: 60px;
   line-height: 60px;
-  color: #fff;
+  color: #f8f8f8;
   text-align: center;
   border: 0 none;
   border-radius: 4px;
@@ -916,7 +814,7 @@ ul.portfolio li.active {
 .footer-section {
     background: #0d0d0d;
     padding: 80px 0px;
-    color: #f8f8f8;
+    color: #bada55;
 }
 
 .footer-section p {
@@ -924,18 +822,18 @@ ul.portfolio li.active {
 }
 
 .footer-section a {
-    color: #ffffff;
+    color: #bada55;
 }
 
 /* Email Form */
 
 form {
   width: 500px;
-  background: white;
+  background: #f8f8f8;
   padding: 20px 25px;
   margin: auto;
   margin-top: 30px;
-  box-shadow: 0px 1px 2px rgba(0,0,0,0.2);
+  box-shadow: 0px 1px 2px rgba(13,13,13,0.2);
 }
 form input,
 form textarea {
@@ -950,14 +848,14 @@ form textarea {
   height: 100px;
 }
 form button {
-  border: 1px solid rgba(0,0,0,0.2);
+  border: 1px solid rgba(13,13,13,0.2);
   padding: 8px 35px;
   font-size: 12px;
   background: #0d0d0d;
-  color: white;
+  color: #f8f8f8;
 }
 form label {
-  color: #777;
+  color: #0d0d0d;
   font-size: 11px;
   margin-bottom: 2px;
   display: block;
@@ -1008,7 +906,7 @@ form span {
         background: #f8f8f8;
     }
     .navigation-background .navbar-toggle .icon-bar {
-        background: #fff;
+        background: #f8f8f8;
     }
     .navbar-toggle {
         margin-right: 0px;
@@ -1021,10 +919,10 @@ form span {
         padding: 11px 15px;
     }
     .navigation-menu .navbar-nav li a:hover {
-        color: #24b662;
+        color: #bada55;
     }
     .navigation-background .navigation-menu .navbar-nav li a:hover {
-        color: #24b662;
+        color: #bada55;
     }
     .navigation-background .navigation-menu .navbar-nav li a {
         padding: 11px 15px;
@@ -1127,7 +1025,7 @@ form span {
     font-size: 25px;
     line-height: 50px;
     text-align: center;
-    color: #fff;
+    color: #f8f8f8;
     position: fixed;
     right: 0px;
     bottom: 50px;
@@ -1136,8 +1034,8 @@ form span {
 
 .scroll-to-top:hover,
 .scroll-to-top:focus {
-    background-color: #1bab58;
-    color: #ffffff;
+    background-color: #bada55;
+    color: #f8f8f8;
 }
 
 
@@ -1460,10 +1358,10 @@ form span {
 }
 
 .uipasta-credit a {
-    color: #24b662;
+    color: #bada55;
     font-weight: 600;
 }
 
 .uipasta-credit a:hover {
-    color: #ffffff;
+    color: #f8f8f8;
 }
