--- a/css/style.css
+++ b/css/style.css
@@ -297,7 +297,7 @@ body.loaded #preloader{
 .home-section-background {
     position: relative;
     height: 100%;
-    background: url(../images/bg/stellar_bg.jpg);
+    background: url(../images/bg/nebula.jpg);
     background-size: cover;
     z-index: 1;
 }
@@ -1422,4 +1422,17 @@ form span {
 
 .uipasta-credit a:hover {
     color: #f8f8f8;
+}
+
+
+.invisastuff {
+    z-index: 1;
+    position: fixed;
+    /*color: */
+}
+
+.under-construction {
+    background: url(../images/underconstruction.jpg);
+    background-size: fill;
+    height: 100%;
 }
