--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,6 +10,7 @@
     --dark-color: #293241;
 
     --white: #fafafa;
+    --black: #222;
 
     --heading-font: 'Architects Daughter', cursive;
     --basic-font: 'Montserrat', sans-serif;
@@ -19,7 +20,8 @@
 }
 
 body {
-    background-color: var(--light-color);
+    background-color: var(--black);
+    color: var(--white);
 
     font-size: 16px;
     font-family: var(--basic-font);
@@ -42,6 +44,19 @@ body {
         ". jobsites .";
 
     justify-items: stretch;
+}
+
+a {
+    text-decoration: none;
+    color: var(--white);
+}
+
+a:hover {
+    font-size: 20px;
+}
+
+a:visited {
+    color: var(--white);
 }
 
 header {
@@ -82,6 +97,8 @@ section {
 
     justify-content: start;
     align-items: center;
+
+    border-bottom: solid 1px var(--white);
 }
 
 section h3 {
@@ -101,6 +118,9 @@ section h3 {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+
+    border-top: solid 1px var(--white);
+    border-bottom: solid 1px var(--white);
 }
 
 #articles {
