--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,6 +17,8 @@
 
     --large-padding: 3rem;
     --small-padding: 2rem;
+
+    --white-border: solid 1px var(--white);
 }
 
 body {
@@ -33,7 +35,7 @@ body {
     position: absolute;
     display: grid;
 
-    grid-template-rows: minmax(400px, auto) 80px repeat(4, 1fr);
+    grid-template-rows: minmax(400px, auto) 80px repeat(5, 1fr);
     grid-template-columns: 10% auto 10%;
     grid-template-areas:
         "header header header"
@@ -41,7 +43,8 @@ body {
         ". articles ."
         ". codesources ."
         ". coding ."
-        ". jobsites .";
+        ". jobsites ."
+        ". games .";
 
     justify-items: stretch;
 }
@@ -90,15 +93,17 @@ section {
     min-height: 300px;
     padding: var(--small-padding);
 
-    /* background-color: red; */
-
     display: flex;
     flex-direction: column;
 
     justify-content: start;
     align-items: center;
 
-    border-bottom: solid 1px var(--white);
+    border-bottom: var(--white-border);
+}
+
+section:last-child {
+    border: none;
 }
 
 section h3 {
@@ -107,7 +112,7 @@ section h3 {
 
 #avatar img {
     border-radius: 25%;
-    box-shadow: 7px 8px 11px white;
+    box-shadow: 7px 8px 11px var(--white);
 }
 
 #navbar {
@@ -119,8 +124,8 @@ section h3 {
     justify-content: space-evenly;
     align-items: center;
 
-    border-top: solid 1px var(--white);
-    border-bottom: solid 1px var(--white);
+    border-top: var(--white-border);
+    border-bottom: var(--white-border);
 }
 
 #articles {
@@ -134,6 +139,9 @@ section h3 {
 }
 #jobsites {
     grid-area: jobsites;
+}
+#games {
+    grid-area: games;
 }
 
 
